js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunction/lib1/l1.6.kt
fun foo(flag: Boolean = false): String {
    if (flag) lib1Foo()
    return "hello 6"
}

inline fun fooInline() = "hello inline 3"
